Refactor GetProductsTest